# DrawBridge

./: .gitignore  .out-of-tree.toml  Makefile  README.md  daemon.c  gen_keys.sh
.github/actions/badge/: action.yml
.github/actions/composite/: test.yml
.github/actions/test/: action.yml
.github/workflows/: kernel-4.14.yml  kernel-4.19.yml  kernel-4.4.yml  kernel-4.9.yml  kernel-5.10.yml  kernel-5.15.yml  kernel-5.17.yml  kernel-5.4.yml  kernel-5.8.9.yml  kernel-5.8.yml  kernel-6.0.6.yml  main.yml  pull_request.yml  ubuntu-latest.yml
ansible/: main.yml
ansible/roles/drawbridge/: README.md
ansible/roles/drawbridge/defaults/: main.yml
ansible/roles/drawbridge/handlers/: main.yml
ansible/roles/drawbridge/tasks/: cargo.yml  drawbridge.yml  main.yml
ansible/roles/drawbridge/tests/: inventory  test.yml  test_drawbridge.py
ansible/roles/drawbridge/vars/: main.yml
client/: .gdb_history  Makefile  README.md  bridge.c  crypto.c  trigger.c
fuzz/ffi/: build.rs
fuzz/ffi/src/: lib.rs
fuzz/parser-fuzz-target/: Cargo.toml  build.rs
fuzz/parser-fuzz-target/in/: vlan_tagged_ipv4.raw
fuzz/parser-fuzz-target/src/: main.rs
include/: compat.h  drawbridge.h  parser.h  vlan.h
kernel/: .clang-format  Cargo.toml  Makefile  compat.h  crypto.c  drawbridge.h  listen.c  parser.c  parser.h  state.c  trigger.h  utils.c  validator.c  vlan.h  x86_64-unknown-none-gnu.json  xt_crypto.c  xt_hook.c  xt_knock.c  xt_knock.h  xt_knock.o.rc  xt_listen.c  xt_state.c
kernel/parser/: lang.rs  lib.rs
module/: Makefile  ci-config.toml  nixmodule-config.toml
module/ffi/: Cargo.toml  build.rs
module/ffi/src/: bswaps.h  lib.rs  memory.c
module/fuzz/: cpu-scaling.sh
module/fuzz/parser-fuzz-target/: Cargo.toml  README.md
module/fuzz/parser-fuzz-target/in/: bogus_ipv4_protocol_version.raw  udp_header_small_length.raw
module/fuzz/parser-fuzz-target/src/: layer2.rs  layer3.rs  layer4.rs  main.rs
module/include/: drawbridge.h  filter.h  parser.h  vlan.h
module/src/: crypto.c  entrypoint.c  listener.c  parser.c  sk_filter.c  state.c  utils.c  validator.c  xt_hook.c  xt_listen.c
module/tests/: Cargo.toml  run.sh  test.sh
module/tests/src/: ipv4.rs  lib.rs
src/: parser.c  validator.c  xt_crypto.c  xt_listen.c  xt_state.c
tests/: run_unittests.sh
tests/kunitconfig/: kunitconfig
tests/src/: ipv4.rs  lib.rs
tests/unittests/: Kconfig  Makefile
tools/: Cargo.toml  README.md
tools/bridge/src/: crypto.rs  drawbridge.rs  main.rs  protocol.rs  route.rs  tcp.rs  udp.rs
tools/src/: crypto.rs  drawbridge.rs  errors.rs  main.rs  protocols.rs  route.rs  tcp.rs
tools/src/protocols/: mod.rs  tcp.rs  udp.rs
