[package]
name = "dbtools"
version = "1.0.3"
authors = ["landhb <landhb@github>"]
edition = "2018"
description = """
Usermode tools for Drawbridge. A Layer 4 Single Packet Authentication Linux kernel
module utilizing Netfilter hooks and kernel supported Berkeley Packet Filters (BPF) 
"""
keywords = ["spa", "auth", "netfilter", "linux-kernel"]
categories = ["command-line-utilities"]
homepage = "https://github.com/landhb/Drawbridge"
repository = "https://github.com/landhb/Drawbridge"
readme = "README.md"
license = "GPL-3.0-or-later"

# Multi-command utility to send auth packets
# generate keys, etc.
[[bin]]
name = "db"
path = "src/main.rs"

[dependencies]
pnet = "0.28.0"
rand = "0.8.5"
clap = "3.2.22"
ring = "0.16.20"
openssl = { version = "0.10.41", features = ["vendored"] }
shellexpand = "2.0.0"
