[package]
name = "dbtools"
version = "1.0.5"
authors = ["landhb <landhb@github>"]
edition = "2021"
description = """
Usermode tools for Drawbridge. A Layer 4 Single Packet Authentication Linux kernel
module utilizing Netfilter hooks and kernel supported Berkeley Packet Filters (BPF) 
"""
keywords = ["spa", "auth", "netfilter", "linux-kernel"]
categories = ["command-line-utilities"]
homepage = "https://github.com/landhb/Drawbridge"
repository = "https://github.com/landhb/Drawbridge"
readme = "README.md"
license = "GPL-3.0-or-later"

# Multi-command utility to send auth packets
# generate keys, etc.
[[bin]]
name = "db"
path = "src/main.rs"

[dependencies]
pnet = "0.28.0"
rand = "0.8.5"
clap = {version = "4.0.24", features = ["derive"]}
ring = "0.16.20"
openssl = { version = "0.10.55", features = ["vendored"] }
shellexpand = "2.0.0"
thiserror = "1.0.37"
