[package]
name = "parser-fuzz-target"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "*"
libc = "*"
parser = {path = "../ffi"}
etherparse = "0.10.1"
arbitrary = { version = "1", features = ["derive"] }

[dev-dependencies]
glob = "0.3.0"